--- a/index.html
+++ b/index.html
@@ -105,18 +105,22 @@
     <p>  U.S. Supreme Court Justices of the 1953 session (<a href="http://www.nps.gov/brvb/learn/historyculture/justices.htm">link)</a>) <br>
       Harris and Ewing/Library of Congress, Prints and Photographs Division</p>
 
-      Front row, left to right:
-      Felix Frankfurter (1939-1962)
-      Hugo Black (1937-1971)
-      Chief Justice Earl Warren (1953-1969)
-      Stanley F. Reed (1938-1957)
-      William O. Douglas (1939-1975)
+      <h3>Front row, left to right:</h3>
+      <ul>
+        <li>Felix Frankfurter (1939-1962)
+        <li>Hugo Black (1937-1971)
+        <li>Chief Justice Earl Warren (1953-1969)
+        <li>Stanley F. Reed (1938-1957)
+        <li>William O. Douglas (1939-1975)
+      </ul>
 
-      Back row, left to right:
-      Tom C. Clark (1949-1967)
-      Robert H. Jackson (1941-1954)
-      Harold H. Burton (1945-1958)
-      Sherman Minton (1949-1956)
+      <h3>Back row, left to right:</h3>
+      <ul>
+        <li>Tom C. Clark (1949-1967)
+        <li>Robert H. Jackson (1941-1954)
+        <li>Harold H. Burton (1945-1958)
+        <li>Sherman Minton (1949-1956)
+      </ul>
   </body>
 
 
