--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     </p>
     <p>
-      APPEAL FROM THE UNITED STATES DISTRICT COURT FOR THE DISTRICT OF KANSAS**
+      APPEAL FROM THE UNITED STATES DISTRICT COURT FOR THE DISTRICT OF KANSAS*
     </p>
 
     <p>
@@ -37,7 +37,7 @@
       Integration at Ole Miss Univ. MST 10/9/62. Photo by Warren K. Leffler <a href="http://commons.wikimedia.org/wiki/File:Integrated_classroom_anacostia_highschool.tif">(<u>link</u>)</a>
 
     </p>
-
+    <br>
 
     <h2>
         Syllabus
@@ -95,7 +95,7 @@
 
     <p>  It is so ordered.</p>
 
-    <p>  *** Together with No. 2, <i>Briggs et al. v. Elliott</i> et al., on appeal from the United States District Court for the Eastern District of South Carolina, argued December 9-10, 1952, reargued December 7-8, 1953; No. 4, <i>Davis et al. v. County School Board of Prince Edward County</i>, Virginia, et al. , on appeal from the United States District Court for the Eastern District of Virginia, argued December 10, 1952, reargued December 7-8, 1953, and No. 10, <i>Gebhart et al. v. Belton et al.</i>, on certiorari to the Supreme Court of Delaware, argued December 11, 1952, reargued December 9, 1953.</p>
+    <p>  * Together with No. 2, <i>Briggs et al. v. Elliott</i> et al., on appeal from the United States District Court for the Eastern District of South Carolina, argued December 9-10, 1952, reargued December 7-8, 1953; No. 4, <i>Davis et al. v. County School Board of Prince Edward County</i>, Virginia, et al. , on appeal from the United States District Court for the Eastern District of Virginia, argued December 10, 1952, reargued December 7-8, 1953, and No. 10, <i>Gebhart et al. v. Belton et al.</i>, on certiorari to the Supreme Court of Delaware, argued December 11, 1952, reargued December 9, 1953.</p>
 
     <p><i>Transcription courtesy of the U.S. National Park Service's <a href="http://www.nps.gov/brvb/index.htm">Brown V Board Of Education National Historic Site </a>website.</i></p>
 
