Final document - ready for submission
Edition of the document has been finalized; it is ready for submission

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <p>
       <img src="integrated_classroom.jpg" alt="Integrated classrom at Ole Miss Univ."><br>
-      Integration at Ole Miss Univ. MST 10/9/62. Photo by Warren K. Leffler <a href="http://commons.wikimedia.org/wiki/File:Integrated_classroom_anacostia_highschool.tif">(<u>link</u>)</a>
+      Integration at Ole Miss Univ. MST 10/9/62. Photo by Warren K. Leffler (<a href="http://commons.wikimedia.org/wiki/File:Integrated_classroom_anacostia_highschool.tif"><u>link</u></a>)
 
     </p>
     <br>
