Document ready for assignment submission
Edition finalized - Ready for submission

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <h2>  Justices of the Court </h2>
 
     <img src="warren-court.jpg">
-    <p>  U.S. Supreme Court Justices of the 1953 session (<a href="http://www.nps.gov/brvb/learn/historyculture/justices.htm">link)</a>) <br>
+    <p>  U.S. Supreme Court Justices of the 1953 session (<a href="http://www.nps.gov/brvb/learn/historyculture/justices.htm">link</a>) <br>
       Harris and Ewing/Library of Congress, Prints and Photographs Division</p>
 
       <h3>Front row, left to right:</h3>
